fix: Make pre font smaller to not wrap

--- a/main.css
+++ b/main.css
@@ -12,3 +12,7 @@
 .twistie.glyphicon {
   margin-right: 3px;
 }
+
+pre {
+  font-size: smaller;
+}
